--- a/sources/dashboard/view.html
+++ b/sources/dashboard/view.html
@@ -68,7 +68,7 @@
                           <router-link :to="'interaction/policyDetail/'+item.id">
                             <span v-bind:title="item.title">{{item.title}}</span>
                           </router-link>
-                          <span>{{item.create_time | formatDate}}</span>
+                          <span>{{item.time | formatDate}}</span>
                         </li>
                       </ul>
                     </el-tab-pane>
@@ -79,7 +79,7 @@
                           <router-link :to="'interaction/policyDetail/'+item.id">
                             <span v-bind:title="item.title">{{item.title}}</span>
                           </router-link>
-                          <span>{{item.create_time | formatDate}}</span>
+                          <span>{{item.time | formatDate}}</span>
                         </li>
                       </ul>
                     </el-tab-pane>
@@ -90,7 +90,7 @@
                           <router-link :to="'interaction/policyDetail/'+item.id">
                             <span v-bind:title="item.title">{{item.title}}</span>
                           </router-link>
-                          <span>{{item.create_time | formatDate}}</span>
+                          <span>{{item.time | formatDate}}</span>
                         </li>
                       </ul>
                     </el-tab-pane>
@@ -168,7 +168,7 @@
               <dd >
               <ul class="list-group">
                   <li v-for="item in latestDirectory" @click="jumpDetailLatestCatalog(item)">
-                      <p class="name"><span v-bind:title="item.dataset_name">{{item.dataset_name}}</span></p>
+                      <p class="name"><span v-bind:title="item.resource_name">{{item.resource_name}}</span></p>
                       <p class="dep" ><span v-bind:title="item.org_name">{{item.org_name}}</span></p>
                   </li>
                 </ul>
@@ -189,7 +189,7 @@
               <dd class="list-group">
                  <ul class="list-group">
                   <li v-for="item in listHottestDirectory" @click="jumpDetailLatestCatalog(item)">
-                      <p class="name"><span v-bind:title="item.dataset_name">{{item.dataset_name}}</span></p>
+                      <p class="name"><span v-bind:title="item.resource_name">{{item.resource_name}}</span></p>
                       <p class="dep" ><span v-bind:title="item.org_name">{{item.org_name}}</span></p>
                   </li>
                 </ul>
@@ -210,9 +210,9 @@
               <dd>
                 <ul class="list-group">
                   <li v-for="item in listLatestDbResource" @click="jumpDetailResource(item)">
-                      <p class="name" v-if="item.TABLE_CN_NAME"><span v-bind:title="item.TABLE_CN_NAME">{{item.TABLE_CN_NAME}}</span></p>
-                      <p class="name" v-else><span v-bind:title="item.TABLE_NAME">{{item.TABLE_NAME}}</span></p>
-                      <p class="dep" ><span v-bind:title="item.dept_name">{{item.dept_name}}</span></p>
+                      <p class="name" v-if="item.cn_name"><span v-bind:title="item.cn_name">{{item.cn_name}}</span></p>
+                      <p class="name" v-else><span v-bind:title="item.en_name">{{item.en_name}}</span></p>
+                      <p class="dep" ><span v-bind:title="item.org_name">{{item.org_name}}</span></p>
                   </li>
                 </ul>
               </dd>
@@ -232,9 +232,9 @@
               <dd>
                 <ul class="list-group">
                   <li v-for="item in listHottestResource" @click="jumpDetailResource(item)">
-                       <p class="name" v-if="item.TABLE_CN_NAME"><span v-bind:title="item.TABLE_CN_NAME">{{item.TABLE_CN_NAME}}</span></p>
-                      <p class="name" v-else><span v-bind:title="item.TABLE_NAME">{{item.TABLE_NAME}}</span></p>
-                      <p class="dep" ><span v-bind:title="item.dept_name">{{item.dept_name}}</span></p>
+                      <p class="name" v-if="item.cn_name"><span v-bind:title="item.cn_name">{{item.cn_name}}</span></p>
+                      <p class="name" v-else><span v-bind:title="item.en_name">{{item.en_name}}</span></p>
+                      <p class="dep" ><span v-bind:title="item.org_name">{{item.org_name}}</span></p>
                   </li>
                 </ul>
               </dd>
@@ -251,7 +251,7 @@
   <!-- 数据图谱 start -->
   <section class="main-4">
     <div class="section-content">
-      <!-- <div class="main-title">
+      <div class="main-title">
         <h4 class="title">
           数据图谱
         </h4>
@@ -260,8 +260,8 @@
         </h2>
         <img class="ico" src="../assets/dashboard/ico1.png" />
         <a v-bind:href="sysObj.datamapmore" target="_blank" class="map-more">更多></a>
-      </div> -->
-      <!-- <div class="content">
+      </div>
+      <div class="content">
         <a class="m-l-0" v-bind:href="sysObj.datamap1" target="_blank">
         <img src="../assets/dashboard/map1.png" /></a>
         <a class="m-l-0" v-bind:href="sysObj.datamap2" target="_blank">
@@ -270,7 +270,7 @@
              <img src="../assets/dashboard/map3.png" /></a>
         <a class="m-l-0" v-bind:href="sysObj.datamap4" target="_blank"><img src="../assets/dashboard/map4.png" /></a>
         <a v-bind:href="sysObj.datamap5" target="_blank" class="m-r-0"> <img src="../assets/dashboard/map5.png" /></a>
-      </div> -->
+      </div>
       <section v-if="getDevelopApisData.length">
         <div class="main-title">
           <h4 class="title">
