首页工具样式，和所属部门修改字段

--- a/sources/catalog/details/view.html
+++ b/sources/catalog/details/view.html
@@ -23,7 +23,7 @@
         </tr>
         <tr class="">
           <td>所属部门</td>
-          <td>{{detail_pro.dept_name}}</td>
+          <td>{{detail_pro.dept_structure_name}}</td>
         </tr>
         <tr class="">
           <td>相关业务</td>
