--- a/sources/developer/view.html
+++ b/sources/developer/view.html
@@ -4,7 +4,7 @@
       <el-tab-pane v-for="appItem in devApps" v-bind:label="appItem.api_name" v-bind:name="appItem.devlp_Id" v-bind:id="appItem.devlp_Id">
         <ul class="sub_apps">
           <li :class="{ active: (current_item.devlp_Id === item.devlp_Id) }" v-for="item in subAppList">
-            <a class="" dataid="item.devlp_Id" dataurl="item.api_url" v-on:click="showLink(item)">{{item.api_name}}</a>
+            <a class="" dataid="item.devlp_Id" dataurl="item.api_url" v-on:click="showLink(item)" :title="item.api_name">{{item.api_name}}</a>
             <span class="spliter">|</span>
           </li>
         </ul>
