专题应用代码逻辑判断优化

--- a/sources/subject/view.html
+++ b/sources/subject/view.html
@@ -58,6 +58,9 @@
             </el-col>
           </el-row>
         </div>
+         <div v-show="!showLinkDom">
+            无数据
+        </div>
       </el-tab-pane>
     </el-tabs>
   </div>
