--- a/sources/dashboard/view.html
+++ b/sources/dashboard/view.html
@@ -251,7 +251,7 @@
   <!-- 数据图谱 start -->
   <section class="main-4">
     <div class="section-content">
-      <div class="main-title">
+      <!-- <div class="main-title">
         <h4 class="title">
           数据图谱
         </h4>
@@ -270,7 +270,7 @@
              <img src="../assets/dashboard/map3.png" /></a>
         <a class="m-l-0" v-bind:href="sysObj.datamap4" target="_blank"><img src="../assets/dashboard/map4.png" /></a>
         <a v-bind:href="sysObj.datamap5" target="_blank" class="m-r-0"> <img src="../assets/dashboard/map5.png" /></a>
-      </div>
+      </div> -->
       <section v-if="getDevelopApisData.length">
         <div class="main-title">
           <h4 class="title">
