表字段调整

--- a/sources/catalog/economy-extend-resourses/view.html
+++ b/sources/catalog/economy-extend-resourses/view.html
@@ -24,7 +24,7 @@
           <td>{{infoSystem.main_feature}}</td>
         </tr>
         <tr class="">
-          <td>系统级别</td>
+          <td>系统性质</td>
           <td>{{infoSystem.system_level}}</td>
         </tr>
       </tbody>
