--- a/sources/interaction/container/hotMessage/view.html
+++ b/sources/interaction/container/hotMessage/view.html
@@ -9,8 +9,10 @@
               <el-table-column label="信息资源名称" width="180">
                 <template scope="scope">
                   <div class="over_space">
-                    <span v-if="scope.row.TABLE_CN_NAME" v-bind:title="scope.row.TABLE_CN_NAME">{{scope.row.TABLE_CN_NAME}}</span>
-                    <span v-else v-bind:title="scope.row.TABLE_NAME">{{scope.row.TABLE_NAME}}</span>
+                    <span v-bind:title="scope.row.TABLE_CN_NAME">{{ scope.row.TABLE_CN_NAME }}</span>&nbsp;
+                    <span v-if="scope.row.TABLE_CN_NAME != null && scope.row.TABLE_NAME != null">[</span>
+                    <span v-if="scope.row.TABLE_NAME != null" v-bind:title="scope.row.TABLE_NAME">{{ scope.row.TABLE_NAME }}</span>
+                    <span v-if="scope.row.TABLE_CN_NAME != null && scope.row.TABLE_NAME != null">]</span>
                   </div>
                 </template>
               </el-table-column>
@@ -28,12 +30,12 @@
                   </div>
                 </template>
               </el-table-column>
-              <el-table-column  label="更新时间" width='100'>
-                 <template scope="scope">
+              <el-table-column label="更新时间" width='100'>
+                <template scope="scope">
                   <div class="over_space">
-                  <span v-bind:title="scope.row.UPDATE_TIME" >{{scope.row.UPDATE_TIME | formatDate}}</span>
+                    <span v-bind:title="scope.row.UPDATE_TIME">{{scope.row.UPDATE_TIME | formatDate}}</span>
                   </div>
-                </template> 
+                </template>
               </el-table-column>
               <el-table-column label="详情" width="100">
                 <template slot-scope="scope">
@@ -55,8 +57,10 @@
               <el-table-column label="信息资源名称" width="180">
                 <template scope="scope">
                   <div class="over_space">
-                    <span v-if="scope.row.TABLE_CN_NAME" v-bind:title="scope.row.TABLE_CN_NAME">{{scope.row.TABLE_CN_NAME}}</span>
-                    <span v-else v-bind:title="scope.row.TABLE_NAME">{{scope.row.TABLE_NAME}}</span>
+                    <span v-bind:title="scope.row.TABLE_CN_NAME">{{ scope.row.TABLE_CN_NAME }}</span>&nbsp;
+                    <span v-if="scope.row.TABLE_CN_NAME != null && scope.row.TABLE_NAME != null">[</span>
+                    <span v-if="scope.row.TABLE_NAME != null" v-bind:title="scope.row.TABLE_NAME">{{ scope.row.TABLE_NAME }}</span>
+                    <span v-if="scope.row.TABLE_CN_NAME != null && scope.row.TABLE_NAME != null">]</span>
                   </div>
                 </template>
               </el-table-column>
@@ -74,9 +78,9 @@
                   </div>
                 </template>
               </el-table-column>
-              <el-table-column prop="count" label="查看次数" width='130'>
+              <el-table-column prop="count" label="查看次数" width='100'>
               </el-table-column>
-               <el-table-column label="详情" width="100">
+              <el-table-column label="详情" width="100">
                 <template slot-scope="scope">
                   <el-button @click="jumpDetailResource(scope.row)" type="text" size="small">查看</el-button>
                 </template>
@@ -114,14 +118,14 @@
                   </div>
                 </template>
               </el-table-column>
-              <el-table-column  label="更新时间" width='100'>
-                  <template scope="scope">
+              <el-table-column label="更新时间" width='100'>
+                <template scope="scope">
                   <div class="over_space">
-                  <span v-bind:title="scope.row.update_time" >{{scope.row.update_time | formatDate}}</span>
+                    <span v-bind:title="scope.row.update_time">{{scope.row.update_time | formatDate}}</span>
                   </div>
-                </template> 
+                </template>
               </el-table-column>
-               <el-table-column label="详情" width="100">
+              <el-table-column label="详情" width="100">
                 <template slot-scope="scope">
                   <el-button @click="jumpDetailLatestCatalog(scope.row)" type="text" size="small">查看</el-button>
                 </template>
@@ -198,8 +202,8 @@
     </el-tabs>
   </nav>
   <div class="search">
-      <el-input placeholder="请输入名称" v-model="inp_seach">
-          <el-button slot="append" icon="search" @click="searchClick">搜索</el-button>
-        </el-input>
+    <el-input placeholder="请输入名称" v-model="inp_seach">
+      <el-button slot="append" icon="search" @click="searchClick">搜索</el-button>
+    </el-input>
   </div>
 </main>
