业务、需求、系统目录的列表里，显示下面含有的信息资源个数

--- a/sources/catalog/department/view.html
+++ b/sources/catalog/department/view.html
@@ -15,7 +15,11 @@
 		</el-table-column>
 		<el-table-column
 		prop="sourceCount"
-		label="信息资源/业务（项）">
+		label="业务/需求/系统（个数）">
+		</el-table-column>
+	<el-table-column
+		prop="datasetCount"
+		label="信息资源(个数)">
 		</el-table-column>
 		</el-table>
 	</div>
