--- a/sources/catalog/depCardingCatalog/department-resources/view.html
+++ b/sources/catalog/depCardingCatalog/department-resources/view.html
@@ -61,6 +61,13 @@
           </div>
         </template>
       </el-table-column>
+      <el-table-column label="信息资源(个数)">
+        <template scope="scope">
+          <div class="over_space">
+            <span v-bind:title="scope.row.datasetCount">{{ scope.row.datasetCount | number }}</span>
+          </div>
+        </template>
+      </el-table-column>
       <el-table-column label="详情" width="80">
         <template slot-scope="scope">
           <el-button @click="handleCurrentChange(scope.row)" type="text" size="small">查看</el-button>
