--- a/sources/catalog/depCardingCatalog/economy-resources/view.html
+++ b/sources/catalog/depCardingCatalog/economy-resources/view.html
@@ -64,7 +64,14 @@
             <span v-bind:title="scope.row.dept_name">{{scope.row.dept_name}}</span>
           </div>
         </template>
-		</el-table-column>
+    </el-table-column>
+    <el-table-column label="信息资源(个数)">
+      <template scope="scope">
+        <div class="over_space">
+          <span v-bind:title="scope.row.datasetCount">{{ scope.row.datasetCount | number }}</span>
+        </div>
+      </template>
+    </el-table-column>
 		<el-table-column label="详情" width="80">
       <template slot-scope="scope">
         <el-button @click="handleCurrentChange(scope.row)" type="text" size="small">查看</el-button>
