--- a/sources/catalog/depCardingCatalog/demand-resources/view.html
+++ b/sources/catalog/depCardingCatalog/demand-resources/view.html
@@ -39,7 +39,7 @@
     <el-table-column label="信息资源(个数)">
       <template scope="scope">
         <div class="over_space">
-          <span v-bind:title="scope.row.datasetCount">{{ scope.row.datasetCount | number }}</span>
+          <span v-bind:title="scope.row.datasetCount">{{ scope.row.datasetCount }}</span>
         </div>
       </template>
     </el-table-column>
