--- a/sources/admin/container/need/view.html
+++ b/sources/admin/container/need/view.html
@@ -18,7 +18,7 @@
         <el-table-column label="需求名称">
           <template scope="scope">
             <div class="over_space">
-              <span v-bind:title="scope.row.require_name">{{scope.row.require_name}}</span>
+              <span v-bind:title="scope.row.require_name">{{scope.row.other_info}}</span>
             </div>
           </template>
         </el-table-column>
