删除梳理目录信息资源个数

--- a/sources/catalog/department/view.html
+++ b/sources/catalog/department/view.html
@@ -17,10 +17,10 @@
 		prop="sourceCount"
 		label="业务/需求/系统（个数）">
 		</el-table-column>
-	<el-table-column
+	<!-- <el-table-column
 		prop="datasetCount"
 		label="信息资源(个数)">
-		</el-table-column>
+		</el-table-column> -->
 		</el-table>
 	</div>
 </main>
